<resources>
    <string name="app_name">charts</string>
    <string name="bar_chart_text">A bar chart or bar graph is a chart or graph that presents categorical data with rectangular bars with heights or lengths proportional to the values that they represent. The bars can be plotted vertically or horizontally</string>
    <string name="bar_chart">EXAMPLE OF BAR CHART</string>
    <string name="pie_chart_text">A pie chart (or a circle chart) is a circular statistical graphic, which is divided into slices to illustrate numerical proportion. In a pie chart, the arc length of each slice (and consequently its central angle and area), is proportional to the quantity it represents</string>
    <string name="pie_chart">EXAMPLE OF PIE CHART</string>
    <string name="radar_chart_text">A radar chart is a graphical method of displaying multivariate data in the form of a two-dimensional chart of three or more quantitative variables represented on axes starting from the same point</string>
    <string name="radar_chart">EXAMPLE OF RADAR CHART</string>
</resources>