<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
   
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:text="@string/bar_chart_text"
        android:textColor="@color/black"
        android:textStyle="italic" />
<Button
android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/barChatButton"
    android:textStyle="bold"
    android:backgroundTint="@color/yellow"
    android:textColor="@color/black"
    android:text="@string/bar_chart"/>
<TextView
android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/pie_chart_text"
    android:textColor="@color/black"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="20dp"/>
<Button
android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/pieChatButton"
    android:backgroundTint="@color/yellow_2"
    android:textColor="@color/black"
    android:text="@string/pie_chart"
    android:textStyle="bold"/>
<TextView
android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/radar_chart_text"
    android:textColor="@color/black"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="20dp"/>
<Button
android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/radarChatButton"
    android:backgroundTint="@color/yellow_3"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:text="@string/radar_chart"/>
    </LinearLayout>